# logdna-agent-v2

./: .arcconfig  .arclint  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bench  Dockerfile.debian  Dockerfile.debug  Jenkinsfile  Makefile  Makefile.docker  Makefile.toml  README.md  appveyor.yml  rust-toolchain.toml  travis.yml
.circleci/: config.yml
api/: Cargo.toml
api/src/: lib.rs
api/src/tailer/: error.rs  mod.rs
bench/: Cargo.toml
common/config/: Cargo.toml
common/config-macro/: Cargo.toml
common/config-macro/src/: lib.rs
common/config/src/: argv.rs  env.rs  env_vars.rs  error.rs  lib.rs  properties.rs  raw.rs
common/consts/: Cargo.toml
common/consts/src/: exit_codes.rs  lib.rs
common/fs/: Cargo.toml
common/fs/src/: cache.rs  error.rs  lib.rs  lookback.rs  rule.rs  source.rs  stream_utils.rs  tail.rs  watch.rs
common/fs/src/cache/: delayed_stream.rs  dir_path.rs  entry.rs  event.rs  event_debouncer.rs  guarded_option.rs  mod.rs  symlinks.rs  tailed_file.rs  watch.rs
common/http/: Cargo.toml
common/http/src/: batch.rs  client.rs  lib.rs  limit.rs  metrics_endpoint.rs  offsets.rs  retry.rs
common/journald/: Cargo.toml
common/journald/src/: error.rs  lib.rs  source.rs  stream.rs
common/journald/src/journalctl/: error.rs  mod.rs
common/journald/src/libjournald/: mod.rs  source.rs  stream.rs
common/k8s/: Cargo.toml
common/k8s/src/: errors.rs  event_source.rs  events.rs  feature_leader.rs  lease.rs  lib.rs  metrics_stats_aggregator.rs  metrics_stats_stream.rs  middleware.rs  restarting_stream.rs
common/k8s/src/kube_stats/: cluster_stats.rs  container_stats.rs  controller_stats.rs  extended_pod_stats.rs  helpers.rs  mod.rs  node_stats.rs  pod_stats.rs
common/k8s/src/middleware/: deduplication.rs  metadata.rs  mod.rs  runner.rs
common/metrics/: Cargo.toml
common/metrics/src/: lib.rs
common/middleware/: Cargo.toml
common/middleware/src/: k8s_line_rules.rs  lib.rs  line_rules.rs  meta_rules.rs
common/misc/rate-limit/: .gitignore  Cargo.toml  README.md
common/misc/rate-limit/macro/: Cargo.toml  README.md
common/misc/rate-limit/macro/src/: lib.rs
common/misc/rate-limit/src/: lib.rs
common/misc/rate-limit/tests/: rate_limit_tests.rs
common/misc/shared_types/: Cargo.toml
common/misc/shared_types/src/: dir_path.rs  lib.rs  lookback.rs  sources.rs  truncate.rs
common/notify_stream/: Cargo.toml
common/notify_stream/src/: lib.rs
common/source/: Cargo.toml
common/source/src/: lib.rs
common/state/: Cargo.toml
common/state/src/: lib.rs  offsets.rs  span.rs  state.rs
common/test/mock-ingester/: .gitrepo  Cargo.toml  Dockerfile  mock-ingester.yaml
common/test/mock-ingester/src/: lib.rs
common/test/types/: Cargo.toml
common/test/types/src/: lib.rs  strategies.rs
config/: agent-satellite.conf  agent-sattelite.conf
docker/: dispatch.sh  docker-entrypoint.sh  journald_dispatch.sh  kind_dispatch.sh  kind_start.sh  kind_stop.sh  lib.sh
docker/journald/: Dockerfile
docker/kind/: Dockerfile  agent-dev-build.yaml  kind-config.yaml  metrics-server.yaml  test-resources.yaml
docker/socat/: Dockerfile
docs/: CODE_OF_CONDUCT.md  HELM.md  INTERNAL_METRICS.md  KUBERNETES.md  LICENSE.md  LINUX.md  MACOS.md  META.md  OPENSHIFT.md  README.md  REGEX.md  WINDOWS.md
k8s/: agent-namespace.yaml  agent-resources-no-cap.yaml  agent-resources-openshift-supertenant.yaml  agent-resources-openshift.yaml  agent-resources-satellite-debug.yaml  agent-resources-satellite-dev.yaml  agent-resources-satellite.yaml  agent-resources-supertenant.yaml  agent-resources-with-reporter.yaml  agent-resources.yaml  agent-startup-lease.yaml  agent-stress-test-namespace.yaml  agent-stress-test.yaml  default-st.yaml  default.yaml  event-leader-lease.yaml  leader-election-leases.yaml  logdna-agent-config-supertenant.yaml  logdna-agent-ns.yaml  logdna-agent-st.yaml  logdna-agent.yaml  mock-ingester.yaml  reporter-leader-lease.yaml
linux/: logdna-agent.service  package.sh  postinst
packaging/linux/: after-upgrade  before-remove  logdna-agent.service
packaging/macos/: arm64.sh  com.logdna.logdna-agent.plist  mezmo-agent.rb  uninstall-mac-agent.sh  x86.sh
packaging/windows/: License.rtf  logdna-agent.wxs  mezmo-agent.wxs  mk  mk_msi  post_install.ps1
packaging/windows/choco/: README.md  logdna-agent.nuspec  mezmo-agent.nuspec  mk  mk_choco  mk_env  publish_to_choco  publish_to_choco.ps1
packaging/windows/choco/tools/: LICENSE.txt  VERIFICATION.txt  chocolateybeforemodify.ps1  chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/windows/msi/: License.rtf  README.md  logdna.conf.templ  mezmo-agent.wxs  mk  mk.debug  mk_env  mk_env.release  mk_msi  mk_msi.debug  mk_msi.release  mk_test  post_install.ps1  publish_to_s3
rust-image/: Dockerfile
scripts/: mk  mk.bench  mk.clean  mk.clean.kind  mk.image  mk.image.debian  mk.image.debug  mk.integration-test  mk.k8s-test  mk.lint  mk.start.kind  mk.test  ubi8-sysroot.sh  ubi9-sysroot.sh
utils/: mock_ingester.py  stress_test.py
utils/metrics-recorder/: Cargo.toml
utils/metrics-recorder/src/: lib.rs
utils/stress_test/: .dockerignore  Dockerfile  README.md  pyproject.toml  run  stress_test.py
windows/: logdna-agent.wxs  logdna-agent.yml  mk
windows/service/: Cargo.toml  mk
