[workspace]
members = [
    "bin",
    "common/config",
    "common/fs",
    "common/http",
    "common/k8s",
    "common/metrics",
    "common/middleware",
    "common/journald",
    "common/state",
    "common/notify_stream",
    "api",
    "utils/metrics-recorder",
]

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 0
