[workspace]
members = [
    "bin",
    "common/config",
    "common/fs",
    "common/http",
    "common/k8s",
    "common/metrics",
    "common/middleware",
    "common/journald",
    "common/state",
    "common/notify_stream",
    "common/misc/rate-limit",
    "common/misc/rate-limit/macro",
    "common/consts",
    "api",
    "utils/metrics-recorder",
    "common/misc/shared_types",
]
resolver = "2"

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 0

[patch.crates-io]
rate-limit-core = { path = "common/misc/rate-limit" }
rate-limit-macro = { path = "common/misc/rate-limit/macro" }
