# version bump checklist
# 1) version = "X.Y.Z" in this file
#       Cargo.toml
# 2) version in all the k8s yaml image: logdna/logdna-agent-v2:X.Y.Z
#       k8s/*.yaml
# 3) update changelog
#       CHANGELOG.md
# 4) *optional* run 'cargo update' so that new deps are pulled in
# 5) once the diff/pr is accepted tag the commit in master X.Y.Z, this will trigger the CI job

[workspace]
members = [
    "bin",
    "common/config",
    "common/fs",
    "common/http",
    "common/k8s",
    "common/metrics",
    "common/middleware",
    "common/journald",
    "common/state",
    "common/notify_stream",
    "common/misc/rate-limit",
    "common/misc/rate-limit/macro",
    "common/consts",
    "api",
    "utils/metrics-recorder",
    "common/misc/shared_types",
]
resolver = "2"

[workspace.package]
edition = "2018"
rust-version = "1.93.1"
version = "3.11.1"

[profile.release]
opt-level = 3
debug = true

[profile.dev]
opt-level = 0

[patch.crates-io]
rate-limit-core = { path = "common/misc/rate-limit" }
rate-limit-macro = { path = "common/misc/rate-limit/macro" }
