[package]
name = "bench"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "throughput"
path = "bin/throughput.rs"

[dependencies]
async-channel = "1.6"
escargot = "0.5"
file-rotate = "0.4"
indicatif = "0.16"
logdna_mock_ingester = { package = "logdna-mock-ingester", path = "../common/test/mock-ingester" }
memmap2 = "0.3"
nix = "0.22"
owning_ref = "0.4"
procfs = "0.9"
rand = "0.8"
structopt = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
