[package]
name = "config"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#local
fs = { package = "fs", path = "../fs" }
k8s = { package = "k8s", path = "../k8s" }
http = { package = "http", path = "../http" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
globber = "0.1"
lazy_static = "1.0"
async-compression = "0.3"
log = "0.4"
sysinfo = "0.15"
structopt = "0.3"
java-properties = "1"

[dev-dependencies]
scopeguard = "1.0"
tempfile = "3.1"
