[package]
name = "config"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#local
fs = { package = "fs", path = "../fs" }
http = { package = "http", path = "../http" }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
glob = "0.3"
lazy_static = "1.0"
async-compression = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.24"
structopt = "0.3"
strum = "0.24"
strum_macros = "0.24"
java-properties = "1"
humanize-rs = "0.1"
regex = "1"
path-slash = "0.2"

[dev-dependencies]
scopeguard = "1.0"
tempfile = "3.1"
