[package]
name = "fs"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#local
http = { package = "http", path = "../http" }
metrics = { package = "metrics", path = "../metrics" }
state = { package = "state", path = "../state" }

#i
inotify = "0.9"

#error
thiserror = "1.0"

#utils
bytes = "1"
chrono = "0.4"
pcre2 = { git = "https://github.com/logdna/rust-pcre2.git", branch="0.2", version = "0.2" }
globber = "0.1"
slotmap = "1"
smallvec = "1"
memchr = "2"
serde_json = "1"

#logging
log = "0.4"
lazy_static = "1"

#async
async-trait = "0.1"
tokio = {version= "1", features= ["fs", "io-util"]}
tokio-util = {version= "0.6", features= ["compat"]}
tokio-stream = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

[dev-dependencies]
env_logger = "0.8"
tempfile = "3"
tokio-test = "0.4"
tokio = {version= "1", features= ["fs", "io-util", "time"]}
middleware = { package = "middleware", path = "../middleware" }
