[package]
name = "fs"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#local
http = { package = "mz-http", path = "../http" }
metrics = { package = "metrics", path = "../metrics" }

#io
inotify = "0.9"

#error
thiserror = "1.0"

#utils
pcre2 = "0.2"
globber = "0.1"
hashbrown = "0.8"
slotmap = "1.0"
smallvec = "1.6"

#logging
log = "0.4"
env_logger = "0.7"
lazy_static = "1.4"

#async
tokio = "1"
tokio-util = {version= "0.6", features= ["compat"]}
tokio-stream = "0.1"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.1"
tokio-test = "0.4"
