[package]
name = "fs"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[features]
integration_tests = []

[dependencies]
#local
http = { package = "mz-http", path = "../http" }
consts = { package = "consts", path = "../consts" }
types = { package = "shared_types", path = "../misc/shared_types" }
metrics = { package = "metrics", path = "../metrics" }
middleware = { package = "middleware", path = "../middleware" }
state = { package = "state", path = "../state", default-features=false }
notify_stream = { package = "notify_stream", path = "../notify_stream" }
rate-limit-macro = "1"

#error
thiserror = "1.0"

#utils
bytes = "1"
time = "0.3"
pcre2 = { git = "https://github.com/logdna/rust-pcre2.git", branch="0.2", version = "0.2" }
slotmap = "1"
smallvec = "1"
serde_json = "1"
pin-project-lite = "0.2"
once_cell = "1"
walkdir = "2"
regex = "1"
path_abs = "0.5"
priority-queue = "1"

#logging
lazy_static = "1"
tracing = "0.1"

#async
async-trait = "0.1"
async-channel = "1.8"
tokio = {version= "1", features= ["fs", "io-util"]}
tokio-util = {version= "0.7", features= ["compat"]}
tokio-stream = "0.1"
futures = "0.3"
os_str_bytes = { version= "6", features = ["conversions"]}

countme = {version = "3.0.1", features=["enable"]}

[target.'cfg(windows)'.dependencies]
winapi-util = { version = "0.1" }

[dev-dependencies]
env_logger = "0.9"
tempfile = "3"
tokio-test = "0.4"
tokio = {version= "1", features= ["fs", "io-util", "time", "macros"]}
tokio-stream = "0.1"
pin-utils = "0.1"
