[package]
name = "http"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#local
metrics = { package = "metrics", path = "../metrics" }
state = { package = "state", path = "../state" }

#http
logdna-client = { git = "https://github.com/logdna/logdna-rust.git", branch="0.7.x", version = "0.7.2" }

#io
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
async-compat = "0.2.1"
#utils
log = "0.4"
bytes = "1"
crossbeam = "0.8"
hyper = { version = "0.14", features = ["http1", "server"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
futures = "0.3"
futures-timer = "3"
prometheus = { version = "0.13", features = ["process"] }
async-compression = { version = "0.3.8", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
rand = "0.8"
num_cpus = "1.0"
proptest = "1"
test_types = { package = "types", path = "../test/types" }
