[package]
name = "mz-http"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#local
metrics = { package = "metrics", path = "../metrics" }
#http
logdna-client = { git ="https://github.com/logdna/logdna-rust.git", branch="0.5.x", version = "0.5" }
#io

tokio = "1"
#utils
log = "0.4"
crossbeam = "0.7"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
futures = "0.3"

[dev-dependencies]
rand = "0.7"
num_cpus = "1.0"
