[package]
name = "mz-http"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[features]
integration_tests = []

[dependencies]
#local
metrics = { package = "metrics", path = "../metrics" }
consts = { package = "consts", path = "../consts" }
state = { package = "state", path = "../state", default-features=false }
rate-limit-macro = { package = "rate-limit-macro", path = "../misc/rate-limit/macro" }

#http
logdna-client = { git = "https://github.com/logdna/logdna-rust.git", branch="0.8.x", version = "0.8.0" }

#io
tokio = { version = "1", features = ["fs", "io-util", "macros"] }
async-compat = "0.2.1"
#utils
tracing = "0.1"
bytes = "1"
crossbeam = "0.8"
hyper = { version = "1", features = ["http1", "server"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client", "service"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
futures = "0.3"
futures-timer = "3"
prometheus = { version = "0.13", features = ["process"] }
async-compression = { version = "0.4", features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-test = "0.4"
rand = "0.8"
num_cpus = "1.0"
proptest = "1"
test_types = { package = "types", path = "../test/types" }
once_cell = "1.10"
