[package]
name = "journald"
version = "0.1.0"
authors = ["jakedipity <jacob.hull@logdna.com>"]
edition = "2018"

[dependencies]
http = { package = "http", path = "../http" }
metrics = { package = "metrics", path = "../metrics" }

tokio = { package = "tokio", version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
log = "0.4"
mio = "0.7"
chrono = "0.4"
systemd = { package = "systemd", version = "0.7", optional = true }

serial_test = { version = "0.5", optional = true }

[features]
default = []
libjournald = ["systemd"]
journald_tests = ["libjournald", "serial_test"]
