[package]
name = "journald"
version = "0.1.0"
authors = ["jakedipity <jacob.hull@logdna.com>"]
edition = "2018"

[dependencies]
http = { package = "http", path = "../http" }
metrics = { package = "metrics", path = "../metrics" }

tokio = { package = "tokio", version = "1", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
log = "0.4"
chrono = "0.4"

# journalctl
combine = { package = "combine", version = "4", optional = true }
bytes = { package = "bytes", version = "1", optional = true }
tokio_util = { package = "tokio-util", version = "0.6", features = ["codec"], optional = true }

# libjournald
mio = { package = "mio" , version = "0.7", optional = true }
systemd = { package = "systemd", version = "0.7", optional = true }

# tests
serial_test = { version = "0.5", optional = true }

[dev-dependencies]
partial_io = { package = "partial-io", version = "0.5", features = ["tokio1"]}
tokio-test = "0.4"

[features]
default = ["journalctl"]
journalctl = ["bytes", "combine", "tokio_util", "tokio/process"]
libjournald = ["systemd", "mio"]
journald_tests = ["libjournald", "serial_test"]
