[package]
name = "k8s"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#local
middleware = { package = "middleware", path = "../middleware" }
http = { package = "http", path = "../http" }
metrics = { package = "metrics", path = "../metrics" }
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.57"
hyper = "0.14"
hyper-timeout = "0.4"
hyper-rustls = "0.23"
tower = "0.4"
tower-http = { version = "0.3.3", features = ["set-header"] }
humantime = "2"
crossbeam = "0.8"
regex = "1"
lazy_static = "1"
log = "0.4"
tokio = { package = "tokio", version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
futures = "0.3"
thiserror = "1.0"
parking_lot = "0.11"
kube = { version = "0.73.0", default-features = false, features = ["rustls-tls", "client", "runtime", "gzip"] }
k8s-openapi = { version = "0.15", default_features = false, features = ["v1_24"] }
kube-derive = "0.73.0"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde-value-flatten = "0.1"
serde_with = "1.3.1"
pin-utils = "0.1"
pin-project-lite = "0.2"

[dev-dependencies]
hyper_http = { package = "http", version = "0.2" }
tokio = { version = "1", features = ["macros"] }