[package]
name = "k8s"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[features]
integration_tests = []

[dependencies]
#local
middleware = { package = "middleware", path = "../middleware" }
http = { package = "mz-http", path = "../http" }
metrics = { package = "metrics", path = "../metrics" }
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = { version = "0.4", features = ["serde"] }
config = { package = "config", path = "../config" }
rate-limit-macro = { package = "rate-limit-macro", path = "../misc/rate-limit/macro" }
anyhow = "1.0.57"
hyper = "0.14"
hyper-timeout = "0.4"
hyper-rustls = "0.24"
tower = "0.4"
tower-http = { version = "0.3", features = ["set-header", "decompression-gzip"] }
tracing = "0.1"
tracing-subscriber = "0.3"
humantime = "2"
crossbeam = "0.8"
regex = "1"
lazy_static = "1"
tokio = { package = "tokio", version = "1", features = ["macros", "process", "signal", "rt-multi-thread", "time"] }
futures = "0.3"
thiserror = "1.0"
kube = { version = "0.84.0", default-features = false, features = ["rustls-tls", "client", "runtime", "gzip", "derive"] }
k8s-openapi = { version = "0.18.0", default_features = false, features = ["v1_20"] }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
serde-value-flatten = "0.1"
serde_with = "1.3.1"
pin-utils = "0.1"
pin-project-lite = "0.2"
rand = "0.8.5"
arc-interner = "0.7.0"
async-channel = "1.8"

[dev-dependencies]
hyper_http = { package = "http", version = "0.2" }
tokio = { version = "1", features = ["macros"] }
