[package]
name = "k8s"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
#local
middleware = { package = "middleware", path = "../middleware" }
http = { package = "mz-http", path = "../http" }
metrics = { package = "metrics", path = "../metrics" }

chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.1"
crossbeam = "0.7"
regex = "1.0"
lazy_static = "1.0"
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
thiserror = "1.0"
parking_lot = "0.11"
kube = "0.52"
kube-runtime = "0.52"
k8s-openapi = { version = "0.11", default_features = false, features = ["v1_12"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
pin-utils = "0.1"
pin-project = "1"
itertools = "0.9"
