[package]
name = "metrics"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.0"
tikv-jemalloc-ctl = "0.4.1"
json = "0.12"
log = "0.4"
prometheus = { version = "0.12", features = ["process"] }
tokio = { version= "1", features= ["time"] }
num = "0.4"
