[package]
name = "metrics"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.0"
json = "0.12"
prometheus = { version = "0.13", features = ["process"] }
tokio = { version= "1", features= ["time"] }
tracing = "0.1"
num = "0.4"

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.5", optional = true }

[features]
jemalloc = ["tikv-jemalloc-ctl"]
integration_tests = []
