[package]
name = "middleware"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>", "Dmitri Khokhlov dmitri.khokhlov@logdna.com"]
edition = "2018"

[dependencies]
#local
http = { package = "http", path = "../http" }
memoffset = "0.6"
regex = "1"
thiserror = "1.0"
log = "0.4"
serde_json = "1"
lazy_static = "*"

