[package]
name = "middleware"
version = "0.1.0"
authors = ["CJP10 <connor.peticca@logdna.com>", "Dmitri Khokhlov dmitri.khokhlov@logdna.com"]
edition = "2018"

[features]
integration_tests = []

[dependencies]
#local
http = { package = "mz-http", path = "../http" }
config = { package = "config", path = "../config" }
rate-limit-macro = { package = "rate-limit-macro", path = "../misc/rate-limit/macro" }
memoffset = "0.6"
regex = "1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
lazy_static = "*"
multimap = "0.8"
