[package]
name = "notify_stream"
version = "0.1.0"
authors = ["LogDNA <help@logdna.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
notify = "4"
futures = "0.3"
async-channel = "1.6"
tokio = { package = "tokio", version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
tokio = { package = "tokio", version = "1", features = ["macros", "rt-multi-thread", "time"] }
pin-utils = "0.1"
predicates = "1"
