[package]
name = "notify_stream"
version = "0.1.0"
authors = ["LogDNA <help@logdna.com>"]
edition = "2018"

[features]
integration_tests = []

[dependencies]
time = "0.3"
notify = "5"
futures = "0.3"
async-channel = "1.6"
tokio = { package = "tokio", version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"

[dev-dependencies]
env_logger = "0.9"
tempfile = "3"
tokio = { package = "tokio", version = "1", features = ["macros", "rt-multi-thread", "time"] }
pin-utils = "0.1"
predicates = "2"
