[package]
name = "state"
version = "0.1.0"
authors = ["Chris Nixon <engineering@logdna.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["state"]
integration_tests = []
state = ["rocksdb"]

[dependencies]
derivative = "2.2"
futures = "0.3"
rocksdb = { version = "0.22", optional = true }
async-channel = "1.6"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive", "rc"] }
slotmap = "1"
smallvec = { version = "1", features = ["serde"] }
vec-collections = "0.4"

[dev-dependencies]
env_logger = "0.9"
tempfile = "3"
tokio = {version ="1", features= ["macros"]}
tokio-test = "0.4"
