[package]
name = "logdna-metrics-recorder"
version = "0.1.0"
edition = "2018"

[features]
integration_tests = []

[dependencies]
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["full"] }
prometheus = "0.13.0"
prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs", rev = "a4574e9" }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
