[package]
name = "logdna-metrics-recorder"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[features]
integration_tests = []

[dependencies]
futures = "0.3.19"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["client"]}
prometheus = "0.14.0"
prometheus-parse = { git = "https://github.com/ccakes/prometheus-parse-rs", rev = "a4574e9" }
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
