[package]
name = "rate-limit-core"
version = "0.1.0"
authors = ["Dmitri Khokhlov <dkhokhlov@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/logdna/logdna-agent-v2"

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
rate-limit-macro = { path = "./macro" }
once_cell = "1.8"

[dev-dependencies]
