[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

lazy_static = "1"

glob = "0.3"
os_str_bytes = { version= "6", features = ["conversions"]}
pcre2 = { git = "https://github.com/logdna/rust-pcre2.git", branch="0.2", version = "0.2" }
regex = "1"
time = "0.3"
tracing = "0.1"

