[package]
name = "logdna-mock-ingester"
version = "0.1.0"
authors = ["Connor Peticca <cjpet10@gmail.com>"]
edition = "2018"
default-run = "https_ingester"

[[bin]]
name = "https_ingester"
path = "src/bin/https_ingester.rs"

[dependencies]
async-compression = { version ="0.4", features = ["tokio", "gzip"] }
hyper = { version = "0.14", features = ["http1", "server", "stream", "tcp", "http2"] }
futures = "0.3"
rustls = "0.23"
rustls-pemfile = "2"
rcgen = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-rustls = "0.26"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.9"
url = "2.2.0"
thiserror = "1"
