[package]
name = "types"
version = "0.1.0"
authors = ["Chris Nixon <chris.nixon@sigma.me.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1"
logdna-client = { git = "https://github.com/logdna/logdna-rust.git", branch="main", version = "0.8" }
proptest = "1"
serde_json = "1"
state = { package = "state", path = "../../state", default-features=false }
