[package]
name = "types"
version = "0.1.0"
authors = ["Chris Nixon <chris.nixon@sigma.me.uk>"]
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1"
logdna-client = { git = "https://github.com/logdna/logdna-rust.git", rev = "54bc3a459e4ca3107403f4272ed779a2bce2fcca" }
proptest = "1"
serde_json = "1"
state = { package = "state", path = "../../state", default-features=false }
