[package]
name = "rate-limit-macro"
version = "0.1.0"
authors = ["Dmitri Khokhlov <dkhokhlov@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/logdna/logdna-agent-v2"

[lib]
proc-macro = true

[features]
integration_tests = []

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]

