[package]
name = "rate-limit-macro"
description = "Procedural macro that provides a simple way to rate-limit blocks of code."
version = "1.0.1"
authors = ["Dmitri Khokhlov <dkhokhlov@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/logdna/logdna-agent-v2/common/msic/rate-limit/macro"

[lib]
proc-macro = true

[features]
integration_tests = []

[dependencies]
proc-macro2 = "1.0.66"
quote = "1.0.33"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]

