[package]
name = "rate-limit-macro"
description = "Procedural macro that provides a simple way to rate-limit blocks of code."
version = "1.0.1"
authors = ["Dmitri Khokhlov <dkhokhlov@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/logdna/logdna-agent-v2/tree/master/common/misc/rate-limit"

[lib]
proc-macro = true

[features]
integration_tests = []

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]

